--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@ h1, h2, h3, h4, h5, h6, a,p,li {
 li{
     margin: 25px;
   }
+
+  .myDesign {
+    /* background-color: #34568B; */
+    color: rgba(0, 0, 0, 0.637);
+  }
