--- a/style.css
+++ b/style.css
@@ -1,33 +1,44 @@
-h1, h2, h3, h4, h5, h6, a,p,li {
-    font-family:'Inconsolata', monospace;
-    margin-left: 20px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+p,
+li {
+  font-family: "Inconsolata", monospace;
+  margin-left: 20px;
 }
-a{
+a {
   text-decoration: none;
 }
 
-li{
-    margin: 25px;
-  }
+li {
+  margin: 25px;
+}
 
-  .myDesign {
-    color: rgba(0, 0, 0, 0.637);
-  }
+.myDesign {
+  color: rgba(0, 0, 0, 0.637);
+}
 
-  .header {
-    overflow: hidden;
-    background-color: rgba(26, 68, 135, 0.749);
-    padding: 30px 10px;
-  }
-  .header a {
-    float: left;
-    color: rgba(0, 0, 0, 0.637);
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 35px;
-    font-weight: 800;
-    line-height: 25px;
-    border-radius: 4px;
-  }
+.header {
+  overflow: hidden;
+  background-color: rgba(26, 68, 135, 0.749);
+  padding: 30px 10px;
+}
+.header a {
+  float: left;
+  color: rgba(0, 0, 0, 0.637);
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 35px;
+  font-weight: 800;
+  line-height: 25px;
+  border-radius: 4px;
+}
 
+#calc-button {
+  margin-top: 0.6rem;
+}
